Wrap fixes

--- a/themes/learn/static/css/theme.css
+++ b/themes/learn/static/css/theme.css
@@ -65,6 +65,20 @@ pre {
     position: relative;
     color: #ffffff;
 }
+pre {
+  overflow: auto;
+  -ms-word-wrap: normal;
+  word-wrap: normal;
+  overflow-wrap: normal;
+  white-space: pre;
+}
+code {
+  overflow: auto;
+  -ms-word-wrap: normal;
+  word-wrap: normal;
+  overflow-wrap: normal;
+  white-space: pre;
+}
 .bg {
     background: #fff;
     border: 1px solid #eaeaea;
@@ -691,7 +705,7 @@ hr {
     background: #4d5257;
 }
 #body-inner pre {
-    white-space: pre-wrap;
+
 }
 .tabs-wrapper pre {
     margin: 1rem 0;
